# tinyoregon

./: CMakeLists.txt  README.md
.github/workflows/: cmake.yml
data/: events.json  items.json  settler_names.txt
src/: CMakeLists.txt  main.cpp
src/entity/: entity.cpp  entity.hpp
src/event/: event.cpp  event.hpp
src/game/: game.cpp  game.hpp
src/item/: item.cpp  item.hpp
src/settler/: caravan.cpp  caravan.hpp  settler.cpp  settler.hpp
tests/: CMakeLists.txt
